[gd_scene load_steps=10 format=3 uid="uid://gmoti5cjspg6"]

[ext_resource type="Script" path="res://Components/Inventory/inventory_dialog.gd" id="1_roulo"]
[ext_resource type="Texture2D" uid="uid://c5lrmo5nbo2u3" path="res://Components/Inventory/Art/UI_Screen.png" id="1_xvxwu"]
[ext_resource type="PackedScene" uid="uid://dmt5nacpltl6i" path="res://UI/Inventory/Boxes-Slots/Item Slots/item_slot.tscn" id="2_g44k5"]
[ext_resource type="Texture2D" uid="uid://s48gy8ly3s0w" path="res://UI/Inventory/Boxes-Slots/Main Boxes/Art/inventory-boxes.png" id="4_tlcim"]
[ext_resource type="FontFile" uid="uid://bjmir8y7vyk8c" path="res://Themes/Fonts/Caviar_Dreams_Bold.ttf" id="5_djjsr"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u5aj0"]
texture = ExtResource("1_xvxwu")
region_rect = Rect2(0, 0, 640, 370)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k1rx1"]
texture = ExtResource("4_tlcim")
region_rect = Rect2(16, 16, 288, 160)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jgoud"]
texture = ExtResource("4_tlcim")
region_rect = Rect2(96, 208, 288, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_er53s"]
texture = ExtResource("4_tlcim")
region_rect = Rect2(337, 16, 112, 160)

[node name="InventoryDialog" type="PanelContainer"]
custom_minimum_size = Vector2(640, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
theme_override_styles/panel = SubResource("StyleBoxTexture_u5aj0")
script = ExtResource("1_roulo")
item_slot_scene = ExtResource("2_g44k5")

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
layout_mode = 2
color = Color(0.137255, 0.137255, 0.137255, 0.745098)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(242.46, 228.6)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(360.37, 218.64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 9

[node name="MainBoxPanel" type="Panel" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(240, 150)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_k1rx1")

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/VBoxContainer/MainBoxPanel"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 10.0
offset_top = 8.0
offset_right = 250.0
offset_bottom = 8.0
columns = 9

[node name="ItemSlot" parent="HBoxContainer/VBoxContainer/MainBoxPanel/GridContainer" instance=ExtResource("2_g44k5")]
layout_mode = 2

[node name="LowerBoxHBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 25)
layout_mode = 2
size_flags_vertical = 6

[node name="LowerBoxPanel" type="Panel" parent="HBoxContainer/VBoxContainer/LowerBoxHBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_jgoud")

[node name="ItemDescRichTextLabel" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/LowerBoxHBoxContainer/LowerBoxPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.021
anchor_top = 0.135
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("5_djjsr")
theme_override_font_sizes/normal_font_size = 14
bbcode_enabled = true

[node name="SidePanelsVBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(108.94, 0)
layout_mode = 2

[node name="SidePanelContainer" type="PanelContainer" parent="HBoxContainer/SidePanelsVBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="HBoxContainer/SidePanelsVBoxContainer2/SidePanelContainer"]
custom_minimum_size = Vector2(60, 140)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_er53s")

[node name="CloseButtonControl" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="CloseButton" type="Button" parent="CloseButtonControl"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -92.0
offset_top = 49.0
offset_right = -74.0
offset_bottom = 80.0
grow_horizontal = 0
scale = Vector2(0.45, 0.45)
size_flags_horizontal = 4
size_flags_vertical = 4
text = "X"

[connection signal="pressed" from="CloseButtonControl/CloseButton" to="." method="_on_close_button_pressed"]
